corrected bg colors to match original, updated img sizing of logos to match, added some flex classes to manipulate the text color, position and alignment in the footer.

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 body {
+  font-size: 1rem;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   text-align: center;
 }
 
 
 .intro {
-  background-color: rgb(97, 109, 131);
+  background-color: rgb(103, 119, 140);
   padding: 1.5rem;
   
 }
@@ -34,7 +36,23 @@ li {
   justify-content: space-between;
 }
 
+.flex_shrink {
+  flex-shrink: calc(50%);
+}
+
+.small_title {
+  color: rgb(76, 93, 109);
+  font-weight: bolder;
+
+}
+
 footer {
-  background-color: rgb(13, 26, 45);
+  font-size: .7rem;
+  background-color: rgb(26, 33, 44);
+  text-align: left;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-left: -.5rem;
+  margin-right: -.5rem;
 }
 
